--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,63 @@
-spring.application.name=spring-boot-metrics-application-books-service
-management.endpoints.web.exposure.include=prometheus
-
+spring.application.name=spring-boot-metrics
+management.endpoints.web.exposure.include=*
 # https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#actuator.metrics.customizing.common-tags
 # common tags
 management.metrics.tags.application=${spring.application.name}
 management.metrics.tags.environment=local
-
-# histogram & percentiles - "_bucket" prefix in the metric name
-management.metrics.distribution.percentiles-histogram.http.server.requests=true
-
+management.influx.metrics.export.enabled=true
 # Tomcat metrics
 server.tomcat.mbeanregistry.enabled=true
+#####################################################
+# Micrometer metrics
+management.metrics.export.influx.db=bolt
+management.metrics.export.influx.step= 1m
+management.metrics.export.influx.uri=http://localhost:8086
+management.metrics.tags.influxdb_database = bolt
+management.metrics.tags.appgroup = bolt
+management.metrics.tags.host = local
+## Instead of having each application write to InfluxDB directly (as the micrometer-registry-influx library does), metrics are sent to the local telegraf agent as StatsD-formatted messages over UDP
+#                        and the agent handles getting the data to the database.
+## Use these properties to enable the statsd metric registry
+management.metrics.export.statsd.enabled = true
+management.metrics.export.statsd.flavor = telegraf
+management.metrics.export.statsd.port = 8125
+management.metrics.enable.all = true
+management.metrics.enable.jvm.memory.used = true
+management.metrics.enable.jvm.memory.max = true
+
+#
+#management.influx.metrics.export.db=pizza
+#management.influx.metrics.export.uri=http://192.168.99.100:8086
+#management.metrics.export.influx.transport=rabbitmq
+#management.metrics.export.influx.logger-name=micrometerLogger
+#management.influx.metrics.export.step=10s
+#management.influx.metrics.export.batch-size=5000
+#management.metrics.export.influx.rabbit-mq.exchange=exch.influxdb.applications
+#management.metrics.export.influx.rabbit-mq.routing-key=10
+#management.metrics.export.influx.rabbit-mq.virtual-host=local
+#management.metrics.export.influx.rabbit-mq.username=user
+#management.metrics.export.influx.rabbit-mq.password=pass
+#management.metrics.export.influx.rabbit-mq.addresses=localhost:5672
+#management.metrics.export.influx.rabbit-mq.health-indicator-enabled = false
+#management.metrics.tags.datacenter = KOP
+#management.metrics.tags.influxdb_database = bolt
+#management.metrics.tags.appgroup = bolt
+#management.metrics.tags.host = local
+#cc.metrics.event.measurement-count=count
+#cc.metrics.event.measurement-time-elapsed=elapsed.time
+## exclusions (default MM metrics for now)
+#management.metrics.enable.jvm = false
+#management.metrics.enable.system = false
+#management.metrics.enable.logback = false
+#management.metrics.enable.rabbitmq = false
+#management.metrics.enable.hikaricp = false
+#management.metrics.enable.tomcat = false
+#management.metrics.enable.jdbc = false
+#management.metrics.enable.process = false
+#management.metrics.enable.spring = false
+#management.statsd.metrics.export.enabled = true
+#management.statsd.metrics.export.flavor = telegraf
+#management.metrics.enable.all = true
+#management.metrics.enable.jvm.memory.used = true
+#management.metrics.enable.spring.rabbitmq = true
+#management.metrics.enable.http.server = true
